tests/snapshots/render_smoke__recipe_box_save_140x40.snap
---
source: tests/render_smoke.rs
expression: "render_screen(140, 40, false, \"save\")"
---
┌ PROJECT STATUS ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│PROOF LANTERN // RECIPE BOX   FOCUS  REOPEN SAVED RECIPES                                                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ ACCEPTED CORE JOURNEY ────────────────────────────────────────────────────────────────────────┐┌ INSPECTOR ──────────────────────────────┐
│PROMISE                                                                                        ││◐ SAVE RECIPE LOCALLY                    │
│“Save a recipe and find it again tomorrow.”                                                    ││BUILT / UNPROVEN   ◇ ACCEPTED            │
│                                                                                               ││ID  save                                 │
│                         ┌──────────────────┐                                                  ││WHY                                      │
│✓ ADD              ━━━━━━│◐ SAVE            │━━╸   ╳ REOPEN            ┄┄┄  ? FIND             ││Implementation evidence exists, but no   │
│PROVEN                   │BUILT /           │      MISSING                  UNKNOWN            ││current passing proof is recorded.       │
│                         │UNPROVEN          │                                                  ││EVIDENCE                                 │
│                         └──────────────────┘                                                  ││STATIC SCAN  Local save code appears to  │
│                           └──── ✓ LOCAL DATABASE  SUPPORTING                                  ││exist.                                   │
│                                                                                               ││src/storage.rs:1-8                       │
│                                                                                               ││                                         │
│OPTIONAL  ? SHARE                                                                              ││                                         │
│                                                                                               ││                                         │
│                                                                                               ││                                         │
│                                                                                               ││                                         │
│                                                                                               ││                                         │
│                                                                                               ││                                         │
│                                                                                               ││                                         │
│                                                                                               ││                                         │
│                                                                                               ││                                         │
│                                                                                               ││                                         │
│                                                                                               ││                                         │
│                                                                                               ││                                         │
│                                                                                               ││                                         │
│                                                                                               ││PROOF NEEDED                             │
│                                                                                               ││Save a recipe, close the app, and confirm│
│┌ JOURNEY BREAK ──────────────────────────────────────────────────────────────────────────────┐││the record persists.                     │
││╳ REOPEN SAVED RECIPES   ID  reopen                                                          │││                                         │
││Required implementation is recorded absent. Downstream unresolved: Find a saved recipe.      │││                                         │
││PROOF NEEDED  Close app, reopen it, and confirm the saved recipe appears.                    │││                                         │
││RUN FROM MAP ROOT  proof-lantern explain reopen                                              │││RUN FROM MAP ROOT                        │
│└─────────────────────────────────────────────────────────────────────────────────────────────┘││proof-lantern explain save               │
└───────────────────────────────────────────────────────────────────────────────────────────────┘└─────────────────────────────────────────┘
┌ COMMAND ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│←→ NODE   G FOCUS   Q EXIT                                                                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
